fix gap in cell caused by message increase width of div

--- a/src/App.css
+++ b/src/App.css
@@ -59,17 +59,17 @@
   box-sizing: border-box; /* Include border in the element's width and height */
 }
 
-.sudoku-cell input {
+/* .sudoku-cell input {
   width: 100%;
   height: 100%;
   text-align: center;
   border: none;
   font-size: 20px;
-}
-
+} */
+/* 
 .sudoku-cell input.multi-numbers {
   font-size: 14px;
-}
+} */
 
 .sudoku-cell.incorrect input {
   background-color: red;
